<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp" />

            <TextView
                android:textSize="17sp"
                android:text="@string/hint_isipadu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/hint_isipadu_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal"/>
            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp" />

            <TextView
                android:textSize="17sp"
                android:text="@string/hint_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/hint_pressure_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal"/>

            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp" />

            <TextView
                android:textSize="17sp"
                android:text="@string/hint_flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/hint_flow_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_normal"/>

            <LinearLayout
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="1dp" />

            <TextView
                android:textSize="17sp"
                android:text="@string/formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView

                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/formula_2"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/symbol_equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_alignBottom="@+id/textView"
                    android:id="@+id/textView4" />

                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/formula_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/textView4"
                    android:id="@+id/textView2"
                    android:layout_toRightOf="@+id/textView4" />

                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/textView2"
                    android:id="@+id/linearLayout"
                    android:orientation="horizontal"
                    android:layout_toRightOf="@+id/textView4" />

                <TextView
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/formula_4"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/linearLayout"
                    android:layout_toEndOf="@id/textView4"
                    android:layout_toRightOf="@+id/textView4" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>